sample.txt
/home/runner/work/testing-ci/testing-ci/test/models/indices/aliases/OpenSearchModel.yaml:1
openapi: 3.0.2
            ^^
SyntaxError: Unexpected number
    at Module._compile (internal/modules/cjs/loader.js:723:23)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Object.require.extensions.(anonymous function) [as .js] (/usr/local/lib/node_modules/dredd/node_modules/proxyquire/lib/proxyquire.js:311:43)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at Proxyquire._withoutCache (/usr/local/lib/node_modules/dredd/node_modules/proxyquire/lib/proxyquire.js:222:12)
    at Proxyquire.load (/usr/local/lib/node_modules/dredd/node_modules/proxyquire/lib/proxyquire.js:129:15)
    at loadHookFile (/usr/local/lib/node_modules/dredd/build/addHooks.js:26:9)